--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
       @font-face {
         font-family: 'Inter';
         font-style: normal;
-        font-weight: 300 900;
-        font-display: swap;
+        font-weight: 100 900;
+        font-display: fallback;
         src: url(/fonts/Inter-variable.woff2) format('woff2');
       }
     </style>
